syntax="proto3";

package user;

option go_package="/user";

message RegisterReq {
    string email = 1;
    string password = 2;
    string confirm_password = 3;
}

message RegisterRes {
    int32 userid = 1;
}

message LoginReq {
    string email= 1;
    string password = 2;
}

message LoginRes {
    int32 userid = 1;
}

service UserService {
    rpc Register(RegisterReq) returns (RegisterRes) {}
    rpc Login(LoginReq) returns (LoginRes) {}
}