syntax = "proto3";

package cart;

option go_package = '/cart';

service CartService {
  rpc AddItem(AddItemRequest) returns (Empty) {}
  rpc GetCart(GetCartRequest) returns (Cart) {}
  rpc EmptyCart(EmptyCartRequest) returns (Empty) {}
}

message CartItem {
  uint32 product_id = 1;
  int32  quantity = 2;
}

message AddItemRequest {
  uint32 user_id = 1;
  CartItem item = 2;
}

message EmptyCartRequest {
  uint32 user_id = 1;
}

message GetCartRequest {
  uint32 user_id = 1;
}

message Cart {
  uint32 user_id = 1;
  repeated CartItem items = 2;
}

message Empty {}
